# com2fun

./: .gitignore  LICENSE  README.md  pyproject.toml
com2fun/: __init__.py  func_def.py  llm_utils.py
com2fun/composer/: __init__.py
com2fun/composer/python_interpreter/: __init__.py  python_interpreter_gen_prompts.py
com2fun/simulated_function/: __init__.py  abstract.py  anthropic.py  flat.py  openai.py  openai_abstract.py  python_interpreter.py  python_interpreter_gen_prompts.py  simplellmsfbase.py  template.py
tests/: __init__.py
