[tool.poetry]
name = "com2fun"
version = "0.1.7"
description = "Transform document into function"
authors = ["Zhengmian Hu <huzhengmian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.6"
openai = ">0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
