[tool.poetry]
name = "com2fun"
version = "0.1.8"
description = "Transform document into function"
authors = ["Zhengmian Hu <huzhengmian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1"
openai = ">=1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
